# rust-password-rs

./: .gitignore  Cargo.toml  README.md  branding.rs  build.rs
.github/workflows/: build-release.yml  deploy-astro-front.yml
assets/: icon.rgba
astro-front/: README.md  astro.config.mjs  package.json
astro-front/public/: CNAME
astro-front/src/components/: Download.astro  Features.astro  Footer.astro  GithubMark.astro  Header.astro  Hero.astro  Privacy.astro
astro-front/src/i18n/: translations.ts
astro-front/src/layouts/: Layout.astro
astro-front/src/pages/: index.astro
astro-front/src/pages/ru/: index.astro
astro-front/src/scripts/: download-counter.ts  i18n.ts
astro-front/src/styles/: global.css
examples/: scan.rs
src/: lib.rs  main.rs  windows.rs
src/ui/: mod.rs  theme.rs  view.rs
