[package]
name = "rust-password"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.35.0", default-features = false, features = ["accesskit", "default_fonts", "glow"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-registry = "0.6.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.23"

[profile.dev]
opt-level = 1
debug = 0
strip = "symbols"
incremental = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
